=== 0.2 (ongoing) ===

* Added a better feedback admin
* Added more statistics

=== 0.1 ===

Initial commit