@@ -2,6 +2,6 @@
 {% load url from future %}
 <p id="frequentlyEntry{{ entry.pk }}">
     <strong>
-        <a onclick="openAnswer('{{ entry.pk }}'); return false;" href="{% url "frequently_entry_detail" pk=entry.pk slug=entry.slug %}#answer">{{ entry.question }}</a>
+        <a onclick="openAnswer('{{ entry.pk }}'); return false;" href="{% url "frequently_entry_detail" slug=entry.slug %}#answer">{{ entry.question }}</a>
     </strong>
 </p>
