@@ -1,0 +1,6 @@
+{% extends "base.html" %}
+{% load frequently_tags %}
+
+{% block main %}
+{% render_category 'test' %}
+{% endblock %}
