@@ -2,8 +2,6 @@
 import os
 
 
-PROJECT_ROOT = os.path.dirname(__file__)
-
 DEBUG = True
 USE_TZ = True
 SITE_ID = 1
@@ -23,21 +21,34 @@ DATABASES = {
 ROOT_URLCONF = 'frequently.tests.urls'
 
 STATIC_URL = '/static/'
-STATIC_ROOT = os.path.join(os.path.dirname(__file__), '../static/')
-MEDIA_ROOT = os.path.join(os.path.dirname(__file__), '../media/')
+
+STATIC_ROOT = os.path.join(__file__, '../../../static/')
+
 STATICFILES_DIRS = (
-    os.path.join(os.path.dirname(__file__), '../static/'),
+    os.path.join(__file__, 'tests/test_static'),
 )
 
 TEMPLATE_DIRS = (
-    os.path.join(os.path.dirname(__file__), 'test_app/templates'),
+    os.path.join(os.path.dirname(__file__), '../templates'),
 )
 
-MIDDLEWARE_CLASSES = [
+MIDDLEWARE_CLASSES = (
+    'django.middleware.common.CommonMiddleware',
     'django.contrib.sessions.middleware.SessionMiddleware',
     'django.middleware.csrf.CsrfViewMiddleware',
     'django.contrib.auth.middleware.AuthenticationMiddleware',
-]
+    'django.contrib.messages.middleware.MessageMiddleware',
+)
+
+TEMPLATE_CONTEXT_PROCESSORS = (
+    'django.core.context_processors.debug',
+    'django.core.context_processors.i18n',
+    'django.core.context_processors.media',
+    'django.core.context_processors.static',
+    'django.core.context_processors.request',
+    'django.contrib.auth.context_processors.auth',
+    'django.contrib.messages.context_processors.messages',
+)
 
 PASSWORD_HASHERS = (
     'django.contrib.auth.hashers.MD5PasswordHasher',
@@ -46,7 +57,7 @@ PASSWORD_HASHERS = (
 COVERAGE_REPORT_HTML_OUTPUT_DIR = os.path.join(
     os.path.dirname(__file__), 'coverage')
 COVERAGE_MODULE_EXCLUDES = [
-    'tests$', 'settings$', 'urls$', 'locale$',
+    'tests$', 'settings$', 'urls$', 'locale$', 'cms_app$',
     'migrations', 'fixtures', 'admin$', 'django_extensions',
 ]
 
@@ -55,12 +66,10 @@ EXTERNAL_APPS = [
     'django.contrib.admindocs',
     'django.contrib.auth',
     'django.contrib.contenttypes',
-    'django.contrib.messages',
     'django.contrib.sessions',
     'django.contrib.staticfiles',
     'django.contrib.sitemaps',
     'django.contrib.sites',
-    'django_jasmine',
     'django_nose',
 ]
 
