@@ -1,12 +1,11 @@
 # You need these requirements in order to contribute to this reusable app.
-django==1.4.2
-django-libs==0.8
+django==1.4.5
+django-libs==1.4.6
 south==0.7.6
 fabric==1.4.3
 factory_boy==1.2.0
 django-nose==1.1
 coverage==3.5.2
 django-coverage==1.2.2
-mock==1.0b1
-selenium==2.25.0
-django-jasmine==0.3.2
+ipdb
+flake8
